<resources>
    <string name="app_name">Recyclens</string>

    <string name="title_home">Inicio</string>
    <string name="title_details">Detalles</string>
    <string name="title_camera">Cámara</string>
    <string name="title_map">Mapa</string>
    <string name="title_profile">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="app_logo">Logo de Recyclens</string>
    <string name="login_title">Iniciar Sesión</string>
    <string name="email_hint">Correo electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="login_button">Iniciar Sesión</string>
    <string name="register_link">Regístrate</string>
    <string name="sample_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
</resources>