<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_details"
        android:icon="@drawable/baseline_message_24"
        android:title="@string/title_details" />

    <item
        android:id="@+id/navigation_camera"
        android:icon="@drawable/baseline_camera_alt_24"
        android:title="@string/title_camera" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/baseline_fmd_good_24"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/title_profile" />

</menu>